# 테스트 파일 추가
add_executable(test_timer_file test_timer.c)

# src 디렉토리의 타겟 링크
target_link_libraries(test_timer_file data_structure_with_c_lib)

# 테스트 추가
add_test(NAME test_timer COMMAND test_timer_file)

add_executable(test_log_write_to_file_file test_log_write_to_file.c)
target_link_libraries(test_log_write_to_file_file data_structure_with_c_lib)
add_test(NAME test_log_write_to_file COMMAND test_log_write_to_file_file)

add_executable(test_feature_dynamic_array_file test_feature_dynamic_array.c)
target_link_libraries(test_feature_dynamic_array_file data_structure_with_c_lib)
add_test(NAME test_feature_dynamic_array COMMAND test_feature_dynamic_array_file)

add_executable(test_performance_dynamic_array_file test_performance_dynamic_array.c)
target_link_libraries(test_performance_dynamic_array_file data_structure_with_c_lib)
add_test(NAME test_performance_dynamic_array COMMAND test_performance_dynamic_array_file)

add_executable(test_feature_doubly_linked_list_file test_feature_doubly_linked_list.c)
target_link_libraries(test_feature_doubly_linked_list_file data_structure_with_c_lib)
add_test(NAME test_feature_doubly_linked_list COMMAND test_feature_doubly_linked_list_file)

add_executable(test_performance_doubly_linked_list_file test_performance_doubly_linked_list.c)
target_link_libraries(test_performance_doubly_linked_list_file data_structure_with_c_lib)
add_test(NAME test_performance_doubly_linked_list COMMAND test_performance_doubly_linked_list_file)

add_executable(test_feature_heap_file test_feature_heap.c)
target_link_libraries(test_feature_heap_file data_structure_with_c_lib)
add_test(NAME test_feature_heap COMMAND test_feature_heap_file)

add_executable(test_performance_heap_file test_performance_heap.c)
target_link_libraries(test_performance_heap_file data_structure_with_c_lib)
add_test(NAME test_performance_heap COMMAND test_performance_heap_file)

add_executable(test_feature_hash_map_file test_feature_hash_map.c)
target_link_libraries(test_feature_hash_map_file data_structure_with_c_lib)
add_test(NAME test_feature_hash_map COMMAND test_feature_hash_map_file)

add_executable(test_performance_hash_map_file test_performance_hash_map.c)
target_link_libraries(test_performance_hash_map_file data_structure_with_c_lib)
add_test(NAME test_performance_hash_map COMMAND test_performance_hash_map_file)